fix level 1 nested alignment

--- a/assets/scss/me.scss
+++ b/assets/scss/me.scss
@@ -627,6 +627,7 @@ aside#file-explorer {
         list-style: none;
         a,
         img,
+        input,
         span {
           padding: 6px 6.5%;
           margin: 0;
@@ -655,62 +656,69 @@ aside#file-explorer {
           li {
             a,
             img,
+            input,
             span {
               // padding-left: 0;
+              padding-left: 15%;
             }
             li a,
             li img,
+            li input,
             li span {
-              padding-left: 15%;
+              padding-left: 23%;
             }
             li li a,
             li li img,
+            li li input,
             li li span {
-              padding-left: 23%;
+              padding-left: 31%;
             }
             li li li a,
             li li li img,
+            li li li input,
             li li li span {
-              padding-left: 31%;
+              padding-left: 39%;
             }
             li li li li a,
             li li li li img,
+            li li li li input,
             li li li li span {
-              padding-left: 39%;
+              padding-left: 47%;
             }
             li li li li li a,
             li li li li li img,
+            li li li li li input,
             li li li li li span {
-              padding-left: 47%;
+              padding-left: 55%;
             }
             li li li li li li a,
             li li li li li li img,
+            li li li li li li input,
             li li li li li li span {
-              padding-left: 55%;
+              padding-left: 63%;
             }
             li li li li li li li a,
             li li li li li li li img,
+            li li li li li li li input,
             li li li li li li li span {
-              padding-left: 63%;
+              padding-left: 71%;
             }
             li li li li li li li li a,
             li li li li li li li li img,
+            li li li li li li li li input,
             li li li li li li li li span {
-              padding-left: 71%;
+              padding-left: 79%;
             }
             li li li li li li li li li a,
             li li li li li li li li li img,
+            li li li li li li li li li input,
             li li li li li li li li li span {
-              padding-left: 79%;
+              padding-left: 86%;
             }
             li li li li li li li li li li a,
             li li li li li li li li li li img,
+            li li li li li li li li li li input,
             li li li li li li li li li li span {
-              padding-left: 86%;
-            }
-            li li li li li li li li li li li a,
-            li li li li li li li li li li li img,
-            li li li li li li li li li li li span {
               padding-left: 94%;
             }
           }
